ChangeLog for herdstat

2005-06-20 Aaron Walker <ka0ttic@gentoo.org>

	* src/action_pkg_handler.cc: Updated metadata_matches() to interpret
	packages whose sole maintainer is the herd itself (herd@gentoo.org is
	listed as the maintainer) as a package with no maintainer.

2005-06-19 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1).

2005-06-18 Aaron Walker <ka0ttic@gentoo.org>

	* src/pkgquery.cc, src/pkgquery.hh, src/querycache.cc,
	src/querycache_xml_handler.cc, src/querycache_xml_handler.hh: Updated
	to cache PORTDIR as well, so we can determine whether the cached
	results came from the same PORTDIR, invalidating if not.

2005-06-17 Aaron Walker <ka0ttic@gentoo.org>

	* src/pkgcache.cc, src/metacache.cc: modified valid() to also test and
	make sure the PORTDIR in "portdir=PORTDIR" is equal to the current
	portdir setting, otherwise the cache should be considered invalid.

2005-06-16 Aaron Walker <ka0ttic@gentoo.org>

	* lib/portage_find.cc: Fixed missing is_pkg_dir check in
	find_package_in() that caused the overlay display to be printed if the
	package directory exists in an overlay but no ebuild is present.

2005-06-15 Aaron Walker <ka0ttic@gentoo.org>

	* src/metacache.cc: Updated valid() to check first line of metacache.
	If it does not equal "version=VERSION" then it'll be considered
	invalid, and of course updated dump() to write it.  This will prevent
	weird bugs caused by any future format changes.
	* src/querycachectl.cc: Updated summary action to display what the
	newest and oldest query/with strings are.

2005-06-14 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.1_rc9).
	* lib/vars.cc: ensure that a previously existing element in the vars
	map is erased before trying to insert it (otherwise insert() fails).
	* bashcomp: Updated to only define _complete_herd and _complete_dev if
	not previously defined, as the upcoming gentoo-bashcomp will define
	them.

2005-06-11 Aaron Walker <ka0ttic@gentoo.org>
